feat: libs加载可行性通过